--- a/lesson34-complex-practice-with-http/todo-list-communication-with-server/src/styles.css
+++ b/lesson34-complex-practice-with-http/todo-list-communication-with-server/src/styles.css
@@ -30,28 +30,49 @@ body {
   margin: auto;
   width: 100%;
 }
-
 .list__item {
+  margin-bottom: 8px;
+  padding: 8px;
+}
+
+.list-item {
   display: flex;
   align-items: center;
   height: 40px;
   border-radius: 8px;
   background-color: wheat;
-  margin-bottom: 8px;
-  padding: 8px;
 }
-
-.list__item_done {
-  text-decoration: line-through;
-  opacity: 0.7;
-}
-
-.list__item:last-child {
+.list-item:last-child {
   margin-bottom: 0;
 }
-
-.list__item-checkbox {
+.list-item_done {
+  opacity: 0.7;
+}
+.list-item_done .list-item__text {
+  text-decoration: line-through;
+}
+.list-item__checkbox {
   margin-right: 8px;
+}
+.list-item__delete-btn {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  outline: none;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  margin-left: auto;
+  text-decoration: none;
+  padding: 0;
+  transform: rotate(45deg);
+  font-size: 18px;
+  line-height: 24px;
+  text-align: center;
+  opacity: 0.7;
+}
+.list-item__delete-btn::before {
+  content: "+";
 }
 
 .btn {
@@ -75,3 +96,5 @@ body {
   border-radius: 8px;
   flex: 1;
 }
+
+/*# sourceMappingURL=styles.css.map */
